<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".Moon">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sunRise"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/sunRise"

            android:textColor="@color/colorWhite"
            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSizeSimple"
            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSizeSimple"
            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"
            app:autoSizeTextType="uniform"


            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/sunRiseAzimuth"
            app:layout_constraintHorizontal_bias="1.0"

            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/sunRiseAzimuth"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/sunRiseAzimuth"

            android:textColor="@color/colorWhite"
            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSizeSimple"
            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSizeSimple"
            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"
            app:autoSizeTextType="uniform"

            app:layout_constraintBottom_toTopOf="@id/sunSet"
            app:layout_constraintTop_toBottomOf="@id/sunRise" />

        <TextView
            android:id="@+id/sunSet"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/sunSet"
            android:textColor="@color/colorWhite"
            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSizeSimple"
            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSizeSimple"
            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"
            app:autoSizeTextType="uniform"

            app:layout_constraintBottom_toTopOf="@id/sunSetAzimuth"
            app:layout_constraintTop_toBottomOf="@id/sunRiseAzimuth" />

        <TextView
            android:id="@+id/sunSetAzimuth"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/sunSetAzimuth"
            android:textColor="@color/colorWhite"
            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSizeSimple"
            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSizeSimple"
            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"
            app:autoSizeTextType="uniform"

            app:layout_constraintBottom_toTopOf="@id/sunTwilight"
            app:layout_constraintTop_toBottomOf="@id/sunSet" />


        <TextView
            android:id="@+id/sunTwilight"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/sunTwilight"
            android:textColor="@color/colorWhite"
            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSizeSimple"
            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSizeSimple"
            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"
            app:autoSizeTextType="uniform"

            app:layout_constraintBottom_toTopOf="@id/sunCivilDawn"
            app:layout_constraintTop_toBottomOf="@id/sunSetAzimuth" />

        <TextView
            android:id="@+id/sunCivilDawn"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/sunCivilDawn"
            android:textColor="@color/colorWhite"
            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSizeSimple"
            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSizeSimple"
            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"
            app:autoSizeTextType="uniform"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sunTwilight" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>