<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".Moon">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="95dp"
            android:layout_height="96dp"
            android:background="@drawable/moon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.074" />

        <TextView
            android:id="@+id/moonRise"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/moonRise"

            android:textColor="@color/colorWhite"
            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSizeSimple"
            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSizeSimple"
            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"
            app:autoSizeTextType="uniform"

            app:layout_constraintBottom_toTopOf="@id/moonSet"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/moonSet"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/moonSet"

            android:textColor="@color/colorWhite"
            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSizeSimple"
            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSizeSimple"
            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"
            app:autoSizeTextType="uniform"

            app:layout_constraintBottom_toTopOf="@id/nearestNewMoon"
            app:layout_constraintTop_toBottomOf="@id/moonRise" />

        <TextView
            android:id="@+id/nearestNewMoon"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/nearestNewMoon"
            android:textColor="@color/colorWhite"
            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSizeSimple"
            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSizeSimple"
            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"
            app:autoSizeTextType="uniform"

            app:layout_constraintBottom_toTopOf="@id/nearestFullMoon"
            app:layout_constraintTop_toBottomOf="@id/moonSet" />

        <TextView
            android:id="@+id/nearestFullMoon"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/nearestFullMoon"
            android:textColor="@color/colorWhite"
            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSizeSimple"
            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSizeSimple"
            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"
            app:autoSizeTextType="uniform"

            app:layout_constraintBottom_toTopOf="@id/phaseOfTheMoon"
            app:layout_constraintTop_toBottomOf="@id/nearestNewMoon" />

        <TextView
            android:id="@+id/phaseOfTheMoon"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/phaseOfTheMoon"
            android:textColor="@color/colorWhite"
            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSizeSimple"
            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSizeSimple"
            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"
            app:autoSizeTextType="uniform"

            app:layout_constraintBottom_toTopOf="@id/synodicMonthDay"
            app:layout_constraintTop_toBottomOf="@id/nearestFullMoon" />

        <TextView
            android:id="@+id/synodicMonthDay"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:gravity="center_horizontal"
            android:maxLines="1"

            android:text="@string/synodicMonthDay"
            android:textColor="@color/colorWhite"
            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSizeSimple"
            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSizeSimple"
            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"
            app:autoSizeTextType="uniform"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phaseOfTheMoon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>