<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Options"
    android:background="@color/colorBlack"
    >


    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:gravity="center"
            android:maxLines="1"
            android:text="@string/longitude"

            android:textColor="@color/colorWhite"
            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSize"
            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSize"
            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"

            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04000002" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:gravity="center"
            android:maxLines="1"
            android:text="@string/latitude"
            android:textColor="@color/colorWhite"

            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSize"
            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSize"
            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"
            app:autoSizeTextType="uniform"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputedLongitude"
            app:layout_constraintVertical_bias="0.0" />

        <!--        //////////////////////////////////////////        -->
        <!--                      INPUTED VALUES                      -->
        <!--        //////////////////////////////////////////        -->


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:gravity="center"
            android:maxLines="1"
            android:text="@string/timeBetweenCalculations"

            android:textColor="@color/colorWhite"
            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSize"
            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSize"
            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputedLatitude"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/inputedLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/hintlongitude"
            android:inputType="number"
            android:textColor="@color/colorOrange"
            android:textColorHint="@color/colorOrange"

            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSize"
            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSize"
            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"
            app:autoSizeTextType="uniform"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/inputedLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/hintLatitude"
            android:inputType="number"
            android:textColor="@color/colorOrange"
            android:textColorHint="@color/colorOrange"

            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSize"
            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSize"
            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"
            app:autoSizeTextType="uniform"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <!--        <EditText-->
        <!--            android:id="@+id/inputedTime"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:background="@color/colorBlack"-->
        <!--            android:gravity="center"-->
        <!--            android:hint="@string/hinttimeBetweenCalculations"-->
        <!--            android:inputType="number"-->
        <!--            android:textColor="@color/colorFunctionalityFaded"-->

        <!--            android:textColorHint="@color/colorHint"-->
        <!--            app:autoSizeMaxTextSize="@dimen/autoSizeMaxTextSize"-->
        <!--            app:autoSizeMinTextSize="@dimen/autoSizeMinTextSize"-->
        <!--            app:autoSizeStepGranularity="@dimen/autoSizeStepGranularity"-->
        <!--            app:autoSizeTextType="uniform"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="1.0"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/textView2" />-->

        <Spinner
            android:id="@+id/spinnerTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:theme="@style/spinnerTheme"
            />

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:background="@color/colorBlack"

            android:text="@string/confirm"
            android:textColor="@color/colorOrange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerTime"
            app:layout_constraintVertical_bias="0.07999998" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>